<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">androidHW2</string>
    
	<string name="action_settings">Settings</string>

	<string name="exit">EXIT</string>
	<string name="login">LogIn</string>
	<string name="username">Username</string>
	<string name="pass">password</string>
	
	<string name="profile">profile</string>
	
	<string name="choosetype">choose type:</string>
	
	<string name="transfer_from">from IBAN:</string>
	<string name="transfer_to">to IBAN:</string>
	
	<string name="currency">lv.</string>
	<string name="ok">ok</string>
	
	<string name="text">text</string>
	
	<string name="confirm">confirm</string>
	<string name="cancel">cancel</string>
	
	<string name="user_ibans">User ibans:</string>
	<string name="add_iban">add IBAN</string>
	
	<string name="iban">IBAN</string>
	<string name="fr_ibans">fr ibans :</string>
	<string name="add_new_iban">add new iban :</string>
	
</resources>
