<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

   <TextView
        android:id="@+id/userIbansTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_ibans" />
    
    
    <ListView
        android:id="@+id/myIbansListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
	
    <TextView
        android:id="@+id/uIbansTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fr_ibans" />
    
    
    
    
    <ListView
        android:id="@+id/uIbansListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
    <TextView
        android:id="@+id/addNewIbanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_iban" />
    
    <EditText 
        android:id="@+id/addNewIbanEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:hint="@string/iban"/>
    
    
    <Button
        android:id="@+id/addUIbansButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_iban" />

</LinearLayout>
